--- a/index.html
+++ b/index.html
@@ -56,9 +56,10 @@
 						<div class="banner-text text-center">
 							<h1 class="white">Healthcare at your desk!!</h1>
 							<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod <br>tempor incididunt ut labore et dolore magna aliqua.</p>
-							<a href="#contact" class="btn btn-appoint">SIGN UP</a>
+						
 						</br>
-							<a href="#contact" class="btn btn-appoint">LOGIN  <i class="fa fa-arrow-right" aria-hidden="true"></i></a>
+							<a href="signin.html" class="btn btn-appoint">LOGIN/SIGNUP 
+								<i class="fa fa-arrow-right" aria-hidden="true"></i></a>
 						</div>
 						<div class="overlay-detail text-center">
 			               <a href="#about"><i class="fa fa-angle-down"></i></a>
