--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 							<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod <br>tempor incididunt ut labore et dolore magna aliqua.</p>
 						
 						</br>
-							<a href="signin.html" class="btn btn-appoint">LOGIN/SIGNUP 
+							<a href="/signin.html" class="btn btn-appoint">LOGIN/SIGNUP 
 								<i class="fa fa-arrow-right" aria-hidden="true"></i></a>
 						</div>
 						<div class="overlay-detail text-center">
