--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     <script type="text/javascript">
       // FirebaseUI config.
       var uiConfig = {
-        signInSuccessUrl: 'https://github.com/firebase/FirebaseUI-Web#signinsuccesscurrentuser-credential-redirecturl',
+        signInSuccessUrl: 'http://stackoverflow.com/questions/38987695/redirecting-to-a-page-after-firebase-login-javascript',
         signInOptions: [
           // Leave the lines as is for the providers you want to offer your users.
           firebase.auth.GoogleAuthProvider.PROVIDER_ID,
