--- a/index.html
+++ b/index.html
@@ -24,11 +24,13 @@
 
       // FirebaseUI config.
       var uiConfig = {
-        signInSuccessUrl: '<url-to-redirect-to-on-success>',
+        signInSuccessUrl: 'http://stackoverflow.com/questions/38987695/redirecting-to-a-page-after-firebase-login-javascript',
         signInOptions: [
           // Leave the lines as is for the providers you want to offer your users.
 
-          firebase.auth.EmailAuthProvider.PROVIDER_ID
+          firebase.auth.EmailAuthProvider.PROVIDER_ID,
+	  firebase.auth.GoogleAuthProvider.PROVIDER_ID
+
         ],
         // Terms of service url.
         tosUrl: '<your-tos-url>'
