--- a/index.html
+++ b/index.html
@@ -572,7 +572,7 @@
     <script src="js/jquery.min.js"></script>
     <script src="js/jquery.easing.min.js"></script>
     <script src="js/bootstrap.min.js"></script>
-    <script src="js/custom.js"></script>
+<!--     <script src="js/custom.js"></script> -->
     <script src="contactform/contactform.js"></script>
     <script >
     	function div_show(){
