--- a/Home.html
+++ b/Home.html
@@ -127,17 +127,17 @@
 			          <div class="more-features-box-text">
 			            <div class="more-features-box-text-icon"> <i class="fa fa-angle-right" aria-hidden="true"></i> </div>
 			            <div class="more-features-box-text-description">
-				            <h3>Prajesh Kumar Doshi</h3>
+				            <h3><a href="pkd.html">Prajesh Kumar Doshi</a></h3>
 				            <p><div class="col-md-4 col-sm-4"></div></div>
 				<div class="more-features-box-text">
 			            <div class="more-features-box-text-icon"> <i class="fa fa-angle-right" aria-hidden="true"></i> </div>
 			            <div class="more-features-box-text-description">
-				            <h3>Supriya Mukesh Jain</h3>
+				            <h3><a href="smj.html">Supriya Mukesh Jain</a></h3>
 				            <p><div class="col-md-4 col-sm-4"></div></div>
 				<div class="more-features-box-text">
 			            <div class="more-features-box-text-icon"> <i class="fa fa-angle-right" aria-hidden="true"></i> </div>
 			            <div class="more-features-box-text-description">
-				            <h3>Neil Nitin Mukesh</h3>
+				            <h3><a href="nnm.html">Neil Nitin Mukesh</a></h3>
 				            <p><div class="col-md-4 col-sm-4"></div></div>
 
 
