--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Medi+</title>
+    <title>My Doctor | Login</title>
     <meta name="description" content="Free Bootstrap Theme by BootstrapMade.com">
     <meta name="keywords" content="free website templates, free bootstrap themes, free template, free bootstrap, free website template">
     <script src="https://cdn.firebase.com/libs/firebaseui/1.0.0/firebaseui.js"></script>
@@ -20,21 +20,17 @@
   };
   firebase.initializeApp(config);
 </script>
-    <script src="https://cdn.firebase.com/libs/firebaseui/1.0.0/firebaseui.js"></script>
-    <link type="text/css" rel="stylesheet" href="https://cdn.firebase.com/libs/firebaseui/1.0.0/firebaseui.css" />
     <script type="text/javascript">
+
       // FirebaseUI config.
       var uiConfig = {
-        signInSuccessUrl: 'http://stackoverflow.com/questions/38987695/redirecting-to-a-page-after-firebase-login-javascript',
+        signInSuccessUrl: '<url-to-redirect-to-on-success>',
         signInOptions: [
           // Leave the lines as is for the providers you want to offer your users.
-          firebase.auth.GoogleAuthProvider.PROVIDER_ID,
-          firebase.auth.FacebookAuthProvider.PROVIDER_ID,
-          firebase.auth.TwitterAuthProvider.PROVIDER_ID,
-          firebase.auth.GithubAuthProvider.PROVIDER_ID,
+
           firebase.auth.EmailAuthProvider.PROVIDER_ID
         ],
-        // Terms of service url. 
+        // Terms of service url.
         tosUrl: '<your-tos-url>'
       };
 
@@ -43,50 +39,11 @@
       // The start method will wait until the DOM is loaded.
       ui.start('#signin', uiConfig);
     </script>
-      <!-- <script type="text/javascript">
-      initApp = function() {
-        firebase.auth().onAuthStateChanged(function(user) {
-          if (user) {
-            // User is signed in.
-            var displayName = user.displayName;
-            var email = user.email;
-            var emailVerified = user.emailVerified;
-            var photoURL = user.photoURL;
-            var uid = user.uid;
-            var providerData = user.providerData;
-            user.getToken().then(function(accessToken) {
-              document.getElementById('sign-in-status').textContent = 'Signed in';
-              document.getElementById('sign-in').textContent = 'Sign out';
-              document.getElementById('account-details').textContent = JSON.stringify({
-                displayName: displayName,
-                email: email,
-                emailVerified: emailVerified,
-                photoURL: photoURL,
-                uid: uid,
-                accessToken: accessToken,
-                providerData: providerData
-              }, null, '  ');
-            });
-          } else {
-            // User is signed out.
-            document.getElementById('sign-in-status').textContent = 'Signed out';
-            document.getElementById('sign-in').textContent = 'Sign in';
-            document.getElementById('account-details').textContent = 'null';
-          }
-        }, function(error) {
-          console.log(error);
-        });
-      };
-
-      window.addEventListener('load', function() {
-        initApp()
-      });
-    </script>
     <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Open+Sans|Raleway|Candal">
     <link rel="stylesheet" type="text/css" href="css/font-awesome.min.css">
     <link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
     <link rel="stylesheet" type="text/css" href="css/style.css">
-    <!-=======================================================
+    <!-- =======================================================
         Theme Name: Medilab
         Theme URL: https://bootstrapmade.com/medilab-free-medical-bootstrap-theme/
         Author: BootstrapMade.com
@@ -132,7 +89,7 @@
 
 						<!-- sign in -->
 
-						<div id="signin" onchange="check" style="width: 385px; background-color: rgba(0,0,0,0.8); ; display: none; margin-left: 390px;">
+						<div id="signin" style="width: 385px; background-color: rgba(0,0,0,0.8); ; display: none; margin-left: 390px;">
 							
 						</div>
 
@@ -157,12 +114,7 @@
 	</br></br></br>
 	<!--/ service-->
 	<!--cta-->
-		<div id="outer" style="width:100%">  
-	    <div id="inner" style="padding-left: 33% ">
-	    <button href="#new_patient_form" class="btn btn-appoint" style="margin-right:35px;" onclick="div_show();">Add New Patient</button>
-		<button href="#contact" class="btn btn-appoint" style="margin-left: 12%;">List Of Patients</button>
-		</div>
-	    </div>
+		
 	<!--cta-->
 	<!--about-->
 	<section id="services" class="section-padding">
@@ -614,7 +566,8 @@
     <script src="js/jquery.easing.min.js"></script>
     <script src="js/bootstrap.min.js"></script>
     <script src="js/custom.js"></script>
-      <script >
+    <script src="contactform/contactform.js"></script>
+    <script >
     	function div_show(){
     		document.getElementById('new_patient_form').style.display = "block";
     	}
