--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 
       // FirebaseUI config.
       var uiConfig = {
-        signInSuccessUrl: '<url-to-redirect-to-on-success>',
+        signInSuccessUrl: 'www.facebook.com',
         signInOptions: [
           // Leave the lines as is for the providers you want to offer your users.
 
@@ -566,7 +566,6 @@
     <script src="js/jquery.easing.min.js"></script>
     <script src="js/bootstrap.min.js"></script>
     <script src="js/custom.js"></script>
-    <script src="contactform/contactform.js"></script>
     <script >
     	function div_show(){
     		document.getElementById('new_patient_form').style.display = "block";
