--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
 
             <!-- sign in -->
 
-            <div id="signin" style="width: 385px; background-color: rgba(0,0,0,0.8); ; display: none; margin-left: 390px;">
+            <div id="signin" style="width: 385px; background-color: rgba(0,0,0,0.8); ; display: block; margin-left: 390px;">
               
             </div>
 
