--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     <script type="text/javascript">
       // FirebaseUI config.
       var uiConfig = {
-        signInSuccessUrl: 'http://stackoverflow.com/questions/38987695/redirecting-to-a-page-after-firebase-login-javascript',
+        signInSuccessUrl: '<url-to-redirect>',
         signInOptions: [
           // Leave the lines as is for the providers you want to offer your users.
           firebase.auth.GoogleAuthProvider.PROVIDER_ID,
