--- a/Dashboard.html
+++ b/Dashboard.html
@@ -127,17 +127,17 @@
 			          <div class="more-features-box-text">
 			            <div class="more-features-box-text-icon"> <i class="fa fa-angle-right" aria-hidden="true"></i> </div>
 			            <div class="more-features-box-text-description">
-				            <h3>Prajesh Kumar Doshi</h3>
+				            <h3><a href="pkd.html">Prakash Kumar Doshi</a></h3>
 				            <p><div class="col-md-4 col-sm-4"></div></div>
 				<div class="more-features-box-text">
 			            <div class="more-features-box-text-icon"> <i class="fa fa-angle-right" aria-hidden="true"></i> </div>
 			            <div class="more-features-box-text-description">
-				            <h3>Supriya Mukesh Jain</h3>
+				            <h3><a href="smj.html">Soham Mukesh Jain</a></h3>
 				            <p><div class="col-md-4 col-sm-4"></div></div>
 				<div class="more-features-box-text">
 			            <div class="more-features-box-text-icon"> <i class="fa fa-angle-right" aria-hidden="true"></i> </div>
 			            <div class="more-features-box-text-description">
-				            <h3>Neil Nitin Mukesh</h3>
+				            <h3><a href="pkd.html">Neil Nitin Mukesh</a></h3>
 				            <p><div class="col-md-4 col-sm-4"></div></div>
 
 
@@ -299,5 +299,18 @@
     		document.getElementById('link1').style.display = "none";
     	}
     </script>
+    <!--Start of Tawk.to Script-->
+<script type="text/javascript">
+var Tawk_API=Tawk_API||{}, Tawk_LoadStart=new Date();
+(function(){
+var s1=document.createElement("script"),s0=document.getElementsByTagName("script")[0];
+s1.async=true;
+s1.src='https://embed.tawk.to/5872252668c397544aad03d5/default';
+s1.charset='UTF-8';
+s1.setAttribute('crossorigin','*');
+s0.parentNode.insertBefore(s1,s0);
+})();
+</script>
+<!--End of Tawk.to Script-->
   </body>
 </html>
