--- a/index.html
+++ b/index.html
@@ -356,7 +356,7 @@
 				<div class="col-md-4 col-sm-4">
 					<div class="testi-details">
 						<!-- Paragraph -->
-						<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+						<p>I took the treatment four weeks ago and witnessed a nice improvement in my health.</p>
 					</div>
 					<div class="testi-info">
 						<!-- User Image -->
@@ -368,25 +368,25 @@
 			    <div class="col-md-4 col-sm-4">
 					<div class="testi-details">
 						<!-- Paragraph -->
-						<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+						<p>The UI of the App is perfect for elderly people like me Their push notifications features is very helpful .</p>
 					</div>
 					<div class="testi-info">
 						<!-- User Image -->
 						<a href="#"><img src="img/thumb.png" alt="" class="img-responsive"></a>
 						<!-- User Name -->
-						<h3>Alex<span>Texas</span></h3>
+						<h3>Neil Nitin<span>Mukesh</span></h3>
 					</div>
 				</div>
 			    <div class="col-md-4 col-sm-4">
 					<div class="testi-details">
 						<!-- Paragraph -->
-						<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+						<p>I particularly like the emergency services and the chat services.</p>
 					</div>
 					<div class="testi-info">
 						<!-- User Image -->
 						<a href="#"><img src="img/thumb.png" alt="" class="img-responsive"></a>
 						<!-- User Name -->
-						<h3>Alex<span>Texas</span></h3>
+						<h3>Prakash<span>Doshi</span></h3>
 					</div>
 				</div>
 			</div>
@@ -523,7 +523,8 @@
 								<h4 class="white no-padding">About Us</h4>
 							</div>
 							<div class="info-sec">
-								<p>I dont know what to put in here.. So Just writing this to make it look as if it is full of data and nothing is empty. </p>
+								<p>thecoders97, Dj Sanghvi College of Engg , Mumbai 
+									. </p>
 							</div>
 					</div>
 					<div class="col-md-4 col-sm-4 marb20">
