--- a/Dashboard.html
+++ b/Dashboard.html
@@ -93,8 +93,15 @@
 
 						<!-- /sign in -->
 						<div id="link1" class="banner-text text-center">
-							<h1 class="white">Welcome, Doctor! </h1>
-											
+							<h1 class="white">Welcome, Doctor! You Are Now Logged In As </h1>
+								<div class="col-md-3 col-xs-6">
+			      <div class="thumbnail"> 
+			      	<img src="img/doctor2.jpg" style="margin-right:20%;border-radius:50%;" alt="..." class="team-img">
+			        <div class="caption">
+			          <h3>Iai Donas</h3>
+			        </div>
+			      </div>
+			    </div>			
 
 						<div class="overlay-detail text-center">
 			              
