--- a/index.html
+++ b/index.html
@@ -372,7 +372,7 @@
 					</div>
 					<div class="testi-info">
 						<!-- User Image -->
-						<a href="#"><img src="img/thumb.png" alt="" class="img-responsive"></a>
+						<a href="#"><img src="img/user4.png" alt="" class="img-responsive"></a>
 						<!-- User Name -->
 						<h3>Neil Nitin<span>Mukesh</span></h3>
 					</div>
@@ -384,7 +384,7 @@
 					</div>
 					<div class="testi-info">
 						<!-- User Image -->
-						<a href="#"><img src="img/thumb.png" alt="" class="img-responsive"></a>
+						<a href="#"><img src="img/user3.png" alt="" class="img-responsive"></a>
 						<!-- User Name -->
 						<h3>Prakash<span>Doshi</span></h3>
 					</div>
