--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
 						<div id="link1" class="banner-text text-center">
 							<h1 class="white">Healthcare at your desk!!</h1>
 							
-							<button  class="btn btn-appoint" onclick="signin()"><a href="Dashboard.html">SIGN UP</a></button>
+							<button  class="btn btn-appoint" onclick="signin()">SIGN UP</button>
 						</br>
 						
 
