--- a/index.html
+++ b/index.html
@@ -564,5 +564,21 @@
   </footer>
   <!--/ footer-->
   </body>
-
+      <script src="js/jquery.min.js"></script>
+    <script src="js/jquery.easing.min.js"></script>
+    <script src="js/bootstrap.min.js"></script>
+    <script src="js/custom.js"></script>
+    <!-- <script src="contactform/contactform.js"></script> -->
+    <script >
+      function div_show(){
+        document.getElementById('new_patient_form').style.display = "block";
+      }
+      function div_hide(){
+        document.getElementById('new_patient_form').style.display = "none";
+      }
+      function signin(){
+        document.getElementById('signin').style.display = "block";
+        document.getElementById('link1').style.display = "none";
+      }
+    </script>
 </html>
