--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
     <script type="text/javascript">
       // FirebaseUI config.
       var uiConfig = {
-        signInSuccessUrl: 'https://thecoders97.github.io/bullya.pe.hu/Dashboard.html',
+        signInSuccessUrl: 'bullya.pe.hu/Dashboard.html',
         signInOptions: [
           // Leave the lines as is for the providers you want to offer your users.
           firebase.auth.GoogleAuthProvider.PROVIDER_ID,
