--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
       // FirebaseUI config.
       var uiConfig = {
         signInSuccessUrl: '',
+        credentialHelper : 'firebaseui.auth.CredentialHelper.NONE',
         signInOptions: [
           // Leave the lines as is for the providers you want to offer your users.
           firebase.auth.GoogleAuthProvider.PROVIDER_ID,
