--- a/index3.html
+++ b/index3.html
@@ -39,6 +39,7 @@
       // FirebaseUI config.
       var uiConfig = {
         signInSuccessUrl: 'http://bullya.pe.hu/Dashboard.html',
+        credentialHelper:'firebaseui.auth.CredentialHelper.NONE',
         signInOptions: [
           // Leave the lines as is for the providers you want to offer your users.
           firebase.auth.GoogleAuthProvider.PROVIDER_ID,
