--- a/index.html
+++ b/index.html
@@ -40,6 +40,7 @@
       var uiConfig = {
         signInSuccessUrl: 'http://bullya.pe.hu/Dashboard.html',
         credentialHelper:'firebaseui.auth.CredentialHelper.NONE',
+        signInFlow :'popup',
         signInOptions: [
           // Leave the lines as is for the providers you want to offer your users.
           firebase.auth.GoogleAuthProvider.PROVIDER_ID,
